# publishmd

./: README.md  pyproject.toml
src/publishmd/transformers/: stale_links_transformer.py  tags_to_categories_transformer.py  wikilink_transformer.py
tests/integration/: __init__.py  config1.yaml  test_integration_pipeline.py
tests/integration/config1-output/: another-page.qmd  fourth page.qmd  index.qmd  qmd-page.qmd  spaces-test.qmd  tags-example.qmd
tests/integration/example/: another-page.md  fifth page.qmd  fourth page.md  index.md  private-page.qmd  qmd-page.qmd  spaces-test.md  tags-example.md  third-page.md
